--- a/trunk/JAVA/VMSClient/nbproject/project.properties
+++ b/trunk/JAVA/VMSClient/nbproject/project.properties
@@ -1,5 +1,5 @@
 abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,capuchin=1.0,MIDP=2.1,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,TouchScreen,JSR239=1.0,JSR211=1.0,JSR234=1.0,ScreenWidth=240,MascotV3=1.0,JSR75=1.0,IAPInfo=1.0,SATSAPKI=1.0,JSR184=1.1,ScreenHeight=321,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0,
-all.configurations=\ ,SonyEricsson_M600_Emu
+all.configurations=\ ,SonyEricsson_K750_Emu,SonyEricsson_M600_Emu
 application.args=
 application.description=
 application.description.detail=
@@ -9,14 +9,32 @@ build.classes.dir=${build.dir}/compiled
 build.classes.excludes=**/*.java,**/*.form,**/*.class,**/.nbintdb,**/*.mvd,**/*.wsclient,**/*.vmd
 build.dir=build/${config.active}
 build.root.dir=build
+configs.SonyEricsson_K750_Emu.abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,MIDP=2.1,capuchin=1.0,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,JSR239=1.0,JSR211=1.0,JSR234=1.0,MascotV3=1.0,ScreenWidth=176,IAPInfo=1.0,JSR75=1.0,JSR184=1.1,SATSAPKI=1.0,ScreenHeight=221,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0
+configs.SonyEricsson_K750_Emu.javac.source=1.3
+configs.SonyEricsson_K750_Emu.javac.target=1.3
+configs.SonyEricsson_K750_Emu.platform.active=Sony_Ericsson_SDK_2_5_0_6_for_the_Java_TM__ME_Platform_Emulator_
+configs.SonyEricsson_K750_Emu.platform.active.description=Sony Ericsson SDK 2.5.0.6 for the Java(TM) ME Platform(Emulator)
+configs.SonyEricsson_K750_Emu.platform.apis=JSR234-1.0,SATSA-APDU-1.0,capuchin-1.0,JSR211-1.0,JSR75-1.0,J2ME-WS-1.0,J2ME-XMLRPC-1.0,JSR82-1.1,SATSA-JCRMI-1.0,SATSA-CRYPTO-1.0,JSR239-1.0,JSR179-1.0.1,MascotV3-1.0,JSR184-1.1,JSR238-1.0,MMAPI-1.1,JSR256-1.1,NokiaUI-1.0,IAPInfo-1.0,JSR229-1.1.0,SATSA-PKI-1.0,JSR180-1.0.1,JSR226-1.0,JSR177-1.0,SEMC_EXT_JP8-1.0,VSCL-2.0,VSCL-2.1,WMA-2.0,eSWT-1.1
+configs.SonyEricsson_K750_Emu.platform.bootclasspath=${platform.home}/lib/eswt.jar:${platform.home}/lib/mascotv3.jar:${platform.home}/lib/jsr226.jar:${platform.home}/lib/jsr256.jar:${platform.home}/lib/satsa-crypto.jar:${platform.home}/lib/jsr229.jar:${platform.home}/lib/jsr238.jar:${platform.home}/lib/j2me-xmlrpc.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/vscl21.jar:${platform.home}/lib/satsa-jcrmi.jar:${platform.home}/lib/jsr082.jar:${platform.home}/lib/satsa-apdu.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/nokiaext.jar:${platform.home}/lib/capuchin.jar:${platform.home}/lib/jsr239.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/satsa-pki.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/jsr180.jar:${platform.home}/lib/iapinfo.jar:${platform.home}/lib/vscl.jar:${platform.home}/lib/mmapi.jar:${platform.home}/lib/j2me-ws.jar:${platform.home}/lib/wma20.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/semc_ext_jp8.jar:${platform.home}/lib/cldcapi11.jar:${platform.home}/lib/midpapi20.jar
+configs.SonyEricsson_K750_Emu.platform.configuration=CLDC-1.1
+configs.SonyEricsson_K750_Emu.platform.device=SonyEricsson_K750_Emu
+configs.SonyEricsson_K750_Emu.platform.fat.jar=true
+configs.SonyEricsson_K750_Emu.platform.profile=MIDP-2.0
+configs.SonyEricsson_K750_Emu.platform.trigger=CLDC
+configs.SonyEricsson_K750_Emu.platform.type=UEI-1.0.1
 configs.SonyEricsson_M600_Emu.abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,capuchin=1.0,MIDP=2.1,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,TouchScreen,JSR239=1.0,JSR211=1.0,JSR234=1.0,ScreenWidth=240,MascotV3=1.0,JSR75=1.0,IAPInfo=1.0,SATSAPKI=1.0,JSR184=1.1,ScreenHeight=321,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0,
+configs.SonyEricsson_M600_Emu.javac.source=1.3
+configs.SonyEricsson_M600_Emu.javac.target=1.3
+configs.SonyEricsson_M600_Emu.manifest.apipermissions=
+configs.SonyEricsson_M600_Emu.manifest.midlets=MIDlet-1: VSMClient,,edu.vms.ClientMIDlet\n
 configs.SonyEricsson_M600_Emu.platform.active=Sony_Ericsson_SDK_2_5_0_6_for_the_Java_TM__ME_Platform_Emulator_
 configs.SonyEricsson_M600_Emu.platform.active.description=Sony Ericsson SDK 2.5.0.6 for the Java(TM) ME Platform(Emulator)
-configs.SonyEricsson_M600_Emu.platform.apis=JSR239-1.0,WMA-2.0,MascotV3-1.0,JSR82-1.1,JSR184-1.1,SATSA-JCRMI-1.0,NokiaUI-1.0,VSCL-2.1,VSCL-2.0,eSWT-1.1,JSR172-1.0,SATSA-APDU-1.0,JSR234-1.0,OBEX-1.0,SATSA-CRYPTO-1.0,JSR179-1.0.1,JSR75-1.0,JSR238-1.0,JSR226-1.0,JSR180-1.0.1,JSR211-1.0,JSR177-1.0,IAPInfo-1.0,J2ME-XMLRPC-1.0,SATSA-PKI-1.0,capuchin-1.0,SEMC_EXT_JP8-1.0,J2ME-WS-1.0,NOKIAUI-1.0,JSR229-1.1.0,JSR256-1.1,MMAPI-1.1
-configs.SonyEricsson_M600_Emu.platform.bootclasspath=${platform.home}/lib/eswt.jar:${platform.home}/lib/mascotv3.jar:${platform.home}/lib/jsr226.jar:${platform.home}/lib/jsr256.jar:${platform.home}/lib/satsa-crypto.jar:${platform.home}/lib/jsr229.jar:${platform.home}/lib/jsr238.jar:${platform.home}/lib/j2me-xmlrpc.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/vscl21.jar:${platform.home}/lib/satsa-jcrmi.jar:${platform.home}/lib/jsr082.jar:${platform.home}/lib/satsa-apdu.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/nokiaext.jar:${platform.home}/lib/capuchin.jar:${platform.home}/lib/jsr239.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/satsa-pki.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/jsr180.jar:${platform.home}/lib/iapinfo.jar:${platform.home}/lib/vscl.jar:${platform.home}/lib/mmapi.jar:${platform.home}/lib/j2me-ws.jar:${platform.home}/lib/wma20.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/semc_ext_jp8.jar:${platform.home}/lib/cldcapi11.jar:${platform.home}/lib/midpapi21.jar
+configs.SonyEricsson_M600_Emu.platform.apis=JSR234-1.0,SATSA-APDU-1.0,capuchin-1.0,JSR211-1.0,JSR75-1.0,J2ME-WS-1.0,J2ME-XMLRPC-1.0,JSR82-1.1,SATSA-JCRMI-1.0,SATSA-CRYPTO-1.0,JSR239-1.0,JSR179-1.0.1,MascotV3-1.0,JSR184-1.1,JSR238-1.0,MMAPI-1.1,JSR256-1.1,NokiaUI-1.0,IAPInfo-1.0,JSR229-1.1.0,SATSA-PKI-1.0,JSR180-1.0.1,JSR226-1.0,JSR177-1.0,SEMC_EXT_JP8-1.0,VSCL-2.0,VSCL-2.1,WMA-2.0,eSWT-1.1
+configs.SonyEricsson_M600_Emu.platform.bootclasspath=${platform.home}/lib/eswt.jar:${platform.home}/lib/mascotv3.jar:${platform.home}/lib/jsr226.jar:${platform.home}/lib/jsr256.jar:${platform.home}/lib/satsa-crypto.jar:${platform.home}/lib/jsr229.jar:${platform.home}/lib/jsr238.jar:${platform.home}/lib/j2me-xmlrpc.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/vscl21.jar:${platform.home}/lib/satsa-jcrmi.jar:${platform.home}/lib/jsr082.jar:${platform.home}/lib/satsa-apdu.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/nokiaext.jar:${platform.home}/lib/capuchin.jar:${platform.home}/lib/jsr239.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/satsa-pki.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/jsr180.jar:${platform.home}/lib/iapinfo.jar:${platform.home}/lib/vscl.jar:${platform.home}/lib/mmapi.jar:${platform.home}/lib/j2me-ws.jar:${platform.home}/lib/wma20.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/semc_ext_jp8.jar:${platform.home}/lib/cldcapi11.jar:${platform.home}/lib/midpapi20.jar
 configs.SonyEricsson_M600_Emu.platform.configuration=CLDC-1.1
 configs.SonyEricsson_M600_Emu.platform.device=SonyEricsson_M600_Emu
-configs.SonyEricsson_M600_Emu.platform.profile=MIDP-2.1
+configs.SonyEricsson_M600_Emu.platform.fat.jar=true
+configs.SonyEricsson_M600_Emu.platform.profile=MIDP-2.0
 configs.SonyEricsson_M600_Emu.platform.trigger=CLDC
 configs.SonyEricsson_M600_Emu.platform.type=UEI-1.0.1
 debug.level=debug
@@ -31,6 +49,7 @@ dist.jar=VMSClient.jar
 dist.javadoc.dir=${dist.dir}/doc
 dist.root.dir=dist
 extra.classpath=
+file.reference.builtin.ks=${netbeans.user}/config/j2me/builtin.ks
 filter.exclude.tests=false
 filter.excludes=
 filter.more.excludes=**/overview.html,**/package.html
@@ -124,7 +143,7 @@ ricoh.platform.target.version=
 run.cmd.options=
 run.jvmargs=
 run.method=STANDARD
-run.security.domain=trusted
+run.security.domain=manufacturer
 run.use.security.domain=false
 savaje.application.icon=
 savaje.application.icon.focused=
@@ -142,9 +161,9 @@ semc.application.uid=E9455088
 semc.certificate.path=
 semc.private.key.password=
 semc.private.key.path=
-sign.alias=
+sign.alias=minimal
 sign.enabled=false
-sign.keystore=
+sign.keystore=${file.reference.builtin.ks}
 src.dir=src
 use.emptyapis=true
 use.preprocessor=true
