--- a/JAVA/VMSClient/nbproject/project.properties
+++ b/JAVA/VMSClient/nbproject/project.properties
@@ -1,5 +1,5 @@
 abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,capuchin=1.0,MIDP=2.1,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,TouchScreen,JSR239=1.0,JSR211=1.0,JSR234=1.0,ScreenWidth=240,MascotV3=1.0,JSR75=1.0,IAPInfo=1.0,SATSAPKI=1.0,JSR184=1.1,ScreenHeight=321,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0,
-all.configurations=\ ,SonyEricsson_K750_Emu,SonyEricsson_M600_Emu
+all.configurations=\ ,SonyEricsson_K750_Emu,SonyEricsson_M600_Emu,SonyEricsson_P900_Emu,SonyEricsson_W810_Emu
 application.args=
 application.description=
 application.description.detail=
@@ -10,8 +10,14 @@ build.classes.excludes=**/*.java,**/*.form,**/*.class,**/.nbintdb,**/*.mvd,**/*.
 build.dir=build/${config.active}
 build.root.dir=build
 configs.SonyEricsson_K750_Emu.abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,MIDP=2.1,capuchin=1.0,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,JSR239=1.0,JSR211=1.0,JSR234=1.0,MascotV3=1.0,ScreenWidth=176,IAPInfo=1.0,JSR75=1.0,JSR184=1.1,SATSAPKI=1.0,ScreenHeight=221,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0
+configs.SonyEricsson_K750_Emu.filter.exclude.tests=true
+configs.SonyEricsson_K750_Emu.filter.excludes=
+configs.SonyEricsson_K750_Emu.filter.more.excludes=**/overview.html,**/package.html
+configs.SonyEricsson_K750_Emu.filter.use.standard=true
 configs.SonyEricsson_K750_Emu.javac.source=1.3
 configs.SonyEricsson_K750_Emu.javac.target=1.3
+configs.SonyEricsson_K750_Emu.manifest.apipermissions=MIDlet-Permissions: javax.microedition.io.Connector.http\n
+configs.SonyEricsson_K750_Emu.manifest.midlets=MIDlet-1: HelloMIDlet, ,edu.vms.ClientMIDlet\n
 configs.SonyEricsson_K750_Emu.platform.active=Sony_Ericsson_SDK_2_5_0_6_for_the_Java_TM__ME_Platform_Emulator_
 configs.SonyEricsson_K750_Emu.platform.active.description=Sony Ericsson SDK 2.5.0.6 for the Java(TM) ME Platform(Emulator)
 configs.SonyEricsson_K750_Emu.platform.apis=JSR234-1.0,SATSA-APDU-1.0,capuchin-1.0,JSR211-1.0,JSR75-1.0,J2ME-WS-1.0,J2ME-XMLRPC-1.0,JSR82-1.1,SATSA-JCRMI-1.0,SATSA-CRYPTO-1.0,JSR239-1.0,JSR179-1.0.1,MascotV3-1.0,JSR184-1.1,JSR238-1.0,MMAPI-1.1,JSR256-1.1,NokiaUI-1.0,IAPInfo-1.0,JSR229-1.1.0,SATSA-PKI-1.0,JSR180-1.0.1,JSR226-1.0,JSR177-1.0,SEMC_EXT_JP8-1.0,VSCL-2.0,VSCL-2.1,WMA-2.0,eSWT-1.1
@@ -37,6 +43,33 @@ configs.SonyEricsson_M600_Emu.platform.fat.jar=true
 configs.SonyEricsson_M600_Emu.platform.profile=MIDP-2.0
 configs.SonyEricsson_M600_Emu.platform.trigger=CLDC
 configs.SonyEricsson_M600_Emu.platform.type=UEI-1.0.1
+configs.SonyEricsson_P900_Emu.abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,MIDP=2.1,capuchin=1.0,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,JSR239=1.0,TouchScreen,JSR211=1.0,JSR234=1.0,MascotV3=1.0,ScreenWidth=208,IAPInfo=1.0,JSR75=1.0,JSR184=1.1,SATSAPKI=1.0,ScreenHeight=256,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0
+configs.SonyEricsson_P900_Emu.javac.source=1.3
+configs.SonyEricsson_P900_Emu.javac.target=1.3
+configs.SonyEricsson_P900_Emu.platform.active=Sony_Ericsson_SDK_2_5_0_6_for_the_Java_TM__ME_Platform_Emulator_
+configs.SonyEricsson_P900_Emu.platform.active.description=Sony Ericsson SDK 2.5.0.6 for the Java(TM) ME Platform(Emulator)
+configs.SonyEricsson_P900_Emu.platform.apis=JSR234-1.0,SATSA-APDU-1.0,capuchin-1.0,JSR211-1.0,JSR75-1.0,J2ME-WS-1.0,J2ME-XMLRPC-1.0,JSR82-1.1,SATSA-JCRMI-1.0,SATSA-CRYPTO-1.0,JSR239-1.0,JSR179-1.0.1,MascotV3-1.0,JSR184-1.1,JSR238-1.0,MMAPI-1.1,JSR256-1.1,NokiaUI-1.0,IAPInfo-1.0,JSR229-1.1.0,SATSA-PKI-1.0,JSR180-1.0.1,JSR226-1.0,JSR177-1.0,SEMC_EXT_JP8-1.0,VSCL-2.0,VSCL-2.1,WMA-2.0,eSWT-1.1
+configs.SonyEricsson_P900_Emu.platform.bootclasspath=${platform.home}/lib/eswt.jar:${platform.home}/lib/mascotv3.jar:${platform.home}/lib/jsr226.jar:${platform.home}/lib/jsr256.jar:${platform.home}/lib/satsa-crypto.jar:${platform.home}/lib/jsr229.jar:${platform.home}/lib/jsr238.jar:${platform.home}/lib/j2me-xmlrpc.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/vscl21.jar:${platform.home}/lib/satsa-jcrmi.jar:${platform.home}/lib/jsr082.jar:${platform.home}/lib/satsa-apdu.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/nokiaext.jar:${platform.home}/lib/capuchin.jar:${platform.home}/lib/jsr239.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/satsa-pki.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/jsr180.jar:${platform.home}/lib/iapinfo.jar:${platform.home}/lib/vscl.jar:${platform.home}/lib/mmapi.jar:${platform.home}/lib/j2me-ws.jar:${platform.home}/lib/wma20.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/semc_ext_jp8.jar:${platform.home}/lib/cldcapi11.jar:${platform.home}/lib/midpapi21.jar
+configs.SonyEricsson_P900_Emu.platform.configuration=CLDC-1.1
+configs.SonyEricsson_P900_Emu.platform.device=SonyEricsson_P900_Emu
+configs.SonyEricsson_P900_Emu.platform.fat.jar=true
+configs.SonyEricsson_P900_Emu.platform.profile=MIDP-2.1
+configs.SonyEricsson_P900_Emu.platform.trigger=CLDC
+configs.SonyEricsson_P900_Emu.platform.type=UEI-1.0.1
+configs.SonyEricsson_W810_Emu.abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,MIDP=2.1,capuchin=1.0,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,JSR239=1.0,JSR211=1.0,JSR234=1.0,MascotV3=1.0,ScreenWidth=176,IAPInfo=1.0,JSR75=1.0,JSR184=1.1,SATSAPKI=1.0,ScreenHeight=221,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0
+configs.SonyEricsson_W810_Emu.javac.source=1.3
+configs.SonyEricsson_W810_Emu.javac.target=1.3
+configs.SonyEricsson_W810_Emu.manifest.apipermissions=
+configs.SonyEricsson_W810_Emu.platform.active=Sony_Ericsson_SDK_2_5_0_6_for_the_Java_TM__ME_Platform_Emulator_
+configs.SonyEricsson_W810_Emu.platform.active.description=Sony Ericsson SDK 2.5.0.6 for the Java(TM) ME Platform(Emulator)
+configs.SonyEricsson_W810_Emu.platform.apis=JSR234-1.0,SATSA-APDU-1.0,capuchin-1.0,JSR211-1.0,JSR75-1.0,J2ME-WS-1.0,J2ME-XMLRPC-1.0,JSR82-1.1,SATSA-JCRMI-1.0,SATSA-CRYPTO-1.0,JSR239-1.0,JSR179-1.0.1,MascotV3-1.0,JSR184-1.1,JSR238-1.0,MMAPI-1.1,JSR256-1.1,NokiaUI-1.0,IAPInfo-1.0,JSR229-1.1.0,SATSA-PKI-1.0,JSR180-1.0.1,JSR226-1.0,JSR177-1.0,SEMC_EXT_JP8-1.0,VSCL-2.0,VSCL-2.1,WMA-2.0,eSWT-1.1
+configs.SonyEricsson_W810_Emu.platform.bootclasspath=${platform.home}/lib/eswt.jar:${platform.home}/lib/mascotv3.jar:${platform.home}/lib/jsr226.jar:${platform.home}/lib/jsr256.jar:${platform.home}/lib/satsa-crypto.jar:${platform.home}/lib/jsr229.jar:${platform.home}/lib/jsr238.jar:${platform.home}/lib/j2me-xmlrpc.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/vscl21.jar:${platform.home}/lib/satsa-jcrmi.jar:${platform.home}/lib/jsr082.jar:${platform.home}/lib/satsa-apdu.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/nokiaext.jar:${platform.home}/lib/capuchin.jar:${platform.home}/lib/jsr239.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/satsa-pki.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/jsr180.jar:${platform.home}/lib/iapinfo.jar:${platform.home}/lib/vscl.jar:${platform.home}/lib/mmapi.jar:${platform.home}/lib/j2me-ws.jar:${platform.home}/lib/wma20.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/semc_ext_jp8.jar:${platform.home}/lib/cldcapi11.jar:${platform.home}/lib/midpapi20.jar
+configs.SonyEricsson_W810_Emu.platform.configuration=CLDC-1.1
+configs.SonyEricsson_W810_Emu.platform.device=SonyEricsson_W810_Emu
+configs.SonyEricsson_W810_Emu.platform.fat.jar=true
+configs.SonyEricsson_W810_Emu.platform.profile=MIDP-2.0
+configs.SonyEricsson_W810_Emu.platform.trigger=CLDC
+configs.SonyEricsson_W810_Emu.platform.type=UEI-1.0.1
 debug.level=debug
 deployment.copy.target=deploy
 deployment.instance=default
@@ -60,7 +93,7 @@ javac.deprecation=false
 javac.encoding=UTF-8
 javac.optimize=false
 javac.source=1.3
-javac.target=1.1
+javac.target=1.3
 javadoc.author=false
 javadoc.encoding=
 javadoc.noindex=false
@@ -71,10 +104,10 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-libs.classpath=${libs.NetBeans MIDP Components.classpath}
+libs.classpath=${libs.NetBeans MIDP Components.classpath};${libs.DataBindingME.classpath}
 main.class=
 main.class.class=applet
-manifest.apipermissions=
+manifest.apipermissions=MIDlet-Permissions: javax.microedition.io.Connector.http, javax.microedition.io.Connector.https\n
 manifest.file=manifest.mf
 manifest.jad=
 manifest.manifest=
@@ -94,12 +127,12 @@ obfuscation.custom=
 obfuscation.level=0
 obfuscator.destjar=${build.dir}/obfuscated.jar
 obfuscator.srcjar=${build.dir}/before-obfuscation.jar
-platform.active=Sony_Ericsson_SDK_2_5_0_6_for_the_Java_TM__ME_Platform_Emulator_
-platform.active.description=Sony Ericsson SDK 2.5.0.6 for the Java(TM) ME Platform(Emulator)
-platform.apis=JSR239-1.0,WMA-2.0,MascotV3-1.0,JSR82-1.1,JSR184-1.1,SATSA-JCRMI-1.0,NokiaUI-1.0,VSCL-2.1,VSCL-2.0,eSWT-1.1,JSR172-1.0,SATSA-APDU-1.0,JSR234-1.0,OBEX-1.0,SATSA-CRYPTO-1.0,JSR179-1.0.1,JSR75-1.0,JSR238-1.0,JSR226-1.0,JSR180-1.0.1,JSR211-1.0,JSR177-1.0,IAPInfo-1.0,J2ME-XMLRPC-1.0,SATSA-PKI-1.0,capuchin-1.0,SEMC_EXT_JP8-1.0,J2ME-WS-1.0,NOKIAUI-1.0,JSR229-1.1.0,JSR256-1.1,MMAPI-1.1
-platform.bootclasspath=${platform.home}/lib/eswt.jar:${platform.home}/lib/mascotv3.jar:${platform.home}/lib/jsr226.jar:${platform.home}/lib/jsr256.jar:${platform.home}/lib/satsa-crypto.jar:${platform.home}/lib/jsr229.jar:${platform.home}/lib/jsr238.jar:${platform.home}/lib/j2me-xmlrpc.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/vscl21.jar:${platform.home}/lib/satsa-jcrmi.jar:${platform.home}/lib/jsr082.jar:${platform.home}/lib/satsa-apdu.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/nokiaext.jar:${platform.home}/lib/capuchin.jar:${platform.home}/lib/jsr239.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/satsa-pki.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/jsr180.jar:${platform.home}/lib/iapinfo.jar:${platform.home}/lib/vscl.jar:${platform.home}/lib/mmapi.jar:${platform.home}/lib/j2me-ws.jar:${platform.home}/lib/wma20.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/semc_ext_jp8.jar:${platform.home}/lib/cldcapi11.jar:${platform.home}/lib/midpapi20.jar
+platform.active=Java_TM__Platform_Micro_Edition_SDK_3_0
+platform.active.description=Java(TM) Platform Micro Edition SDK 3.0
+platform.apis=JSR234-1.0,JSR211-1.0,JSR75-1.0,J2ME-WS-1.0,JSR82-1.1,JSR239-1.0,JSR184-1.1,JSR238-1.0,MMAPI-1.1,JSR226-1.0,WMA-2.0
+platform.bootclasspath=${platform.home}/lib/jsr172_1.0.jar:${platform.home}/lib/jsr234_1.0.jar:${platform.home}/lib/jsr135_1.1.jar:${platform.home}/lib/jsr239_1.0.jar:${platform.home}/lib/jsr238_1.0.jar:${platform.home}/lib/jsr75_1.0.jar:${platform.home}/lib/jsr211_1.0.jar:${platform.home}/lib/jsr184_1.1.jar:${platform.home}/lib/jsr226_1.0.jar:${platform.home}/lib/jsr205_2.0.jar:${platform.home}/lib/jsr082_1.1.jar:${platform.home}/lib/midp_2.0.jar:${platform.home}/lib/cldc_1.1.jar
 platform.configuration=CLDC-1.1
-platform.device=SonyEricsson_M600_Emu
+platform.device=DefaultCldcPhone2
 platform.fat.jar=true
 platform.profile=MIDP-2.0
 platform.trigger=CLDC
